@startuml
hide methods
hide stereotypes
skinparam linetype ortho
skinparam shadowing false

title ERD v1 — System zarządzania przesyłkami

entity User {
  * id : UUID
  --
  first_name : string
  last_name : string
  email : string
  phone : string
  is_active : boolean
  created_at : datetime
}

entity Role {
  * id : UUID
  --
  name : string
  description : string
}

entity Shipment {
  * id : UUID
  --
  tracking_number : string
  status : string
  sender_name : string
  sender_phone : string
  recipient_name : string
  recipient_phone : string
  delivery_type : string
  weight : decimal
  size_category : string
  created_at : datetime
}

entity Label {
  * id : UUID
  --
  file_path : string
  generated_at : datetime
}

entity TrackingEvent {
  * id : UUID
  --
  status : string
  description : string
  event_time : datetime
  location_name : string
}

entity Point {
  * id : UUID
  --
  name : string
  type : string
  city : string
  address : string
  postal_code : string
  is_active : boolean
}

entity Locker {
  * id : UUID
  --
  code : string
  total_compartments : int
  available_compartments : int
}

entity LockerCompartment {
  * id : UUID
  --
  compartment_number : string
  size_type : string
  status : string
}

entity Payment {
  * id : UUID
  --
  amount : decimal
  method : string
  status : string
  external_reference : string
  created_at : datetime
}

entity Redirection {
  * id : UUID
  --
  requested_at : datetime
  reason : string
  status : string
}

entity DeliveryAttempt {
  * id : UUID
  --
  attempt_time : datetime
  result : string
  comment : string
}

entity Notice {
  * id : UUID
  --
  notice_number : string
  issued_at : datetime
  expires_at : datetime
}

entity ReturnEntity as "Return" {
  * id : UUID
  --
  reason : string
  status : string
  initiated_at : datetime
}

entity Complaint {
  * id : UUID
  --
  complaint_number : string
  type : string
  status : string
  description : text
  submitted_at : datetime
}

entity ComplaintAttachment {
  * id : UUID
  --
  file_name : string
  file_path : string
  uploaded_at : datetime
}

entity CourierTask {
  * id : UUID
  --
  task_date : date
  status : string
  assigned_at : datetime
}

User ||--o{ Shipment : creates
User ||--o{ Complaint : submits
User }o--o{ Role : has
Shipment ||--|| Label : has
Shipment ||--o{ TrackingEvent : has
Shipment ||--o{ Payment : has
Shipment ||--o{ Redirection : has
Shipment ||--o{ DeliveryAttempt : has
Shipment ||--o{ Notice : may_generate
Shipment ||--o{ ReturnEntity : may_have
Shipment ||--o{ Complaint : may_have
Shipment }o--|| Point : current_point
Point ||--o{ Locker : contains
Locker ||--o{ LockerCompartment : has
Redirection }o--|| Point : target_point
CourierTask }o--|| Shipment : concerns
CourierTask }o--|| User : assigned_to
Complaint ||--o{ ComplaintAttachment : has
DeliveryAttempt }o--|| User : courier
Notice }o--|| Point : pickup_point
ReturnEntity }o--|| Point : return_to
@enduml
